packages/twenty-docker/k8s/manifests/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: twentycrm-db
  name: twentycrm-db
  namespace: twentycrm
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: twentycrm-db
  template:
    metadata:
      labels:
        app: twentycrm-db
    spec:
      volumes:
        - name: twentycrm-db-data
          persistentVolumeClaim:
            claimName: twentycrm-db-pvc
      containers:
        - name: twentycrm
          image: twentycrm/twenty-postgres-spilo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              name: tcp
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /home/postgres/pgdata
              name: twentycrm-db-data
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  PGPASSWORD=$POSTGRES_PASSWORD psql -U postgres -c "SELECT 1"
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  PGPASSWORD=$POSTGRES_PASSWORD psql -U postgres -c "SELECT 1"
            initialDelaySeconds: 5
            periodSeconds: 10
