packages/twenty-docker/k8s/manifests/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: twentycrm-worker
  name: twentycrm-worker
  namespace: twentycrm
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: twentycrm-worker
  template:
    metadata:
      labels:
        app: twentycrm-worker
    spec:
      containers:
        - name: twentycrm
          image: max-crm:latest
          imagePullPolicy: Never
          command:
            - yarn
            - worker:prod
#            - sh
#            - -c
#            - |
#              until pg_isready -h twentycrm-db.twentycrm.svc.cluster.local -p 5432 -U postgres; do
#                echo "Waiting for database to be ready...";
#                sleep 5;
#              done;
#              yarn worker:prod
          resources:
            requests:
              memory: "1024Mi"
              cpu: "250m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"
          stdin: true
          tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
